[metadata]
name = nimview
version = file: VERSION
author = Marco Mengelkoch
description = A lightwight cross platform UI library for Nim, C, C++ or Python. The main purpose is to simplify creation of Desktop applications based on a HTML/CSS/JS layer that is displayed with Webview.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = nim, user-interface, webview, html, css, javascript, http-server
url = https://github.com/marcomq/nimview
license = MIT
classifiers =
        Development Status :: 4 - Beta
        Natural Language :: English
        Operating System :: OS Independent
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS :: MacOS X
        Environment :: Console
        Environment :: Other Environment
        Intended Audience :: Developers
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: Implementation :: CPython
        Topic :: Software Development
        License :: OSI Approved :: MIT License
       
[options]
packages  = nimview